--- a/01/03/hw03task10.html
+++ b/01/03/hw03task10.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./hwtask5.js"></script>
-    
+    <script src="./hw03task10.js"></script>
 </head>
 <body>
     
