--- a/10/hw10task1.html
+++ b/10/hw10task1.html
@@ -31,8 +31,8 @@
 }
 .image{
 display:block;
-    width: 15%;
-    height: 15%;
+    width: 125px;
+    height: 125px;
    margin: 0 auto;
 }
     </style>
